added careers,privacy policy,terms pages

--- a/about.html
+++ b/about.html
@@ -95,22 +95,22 @@
                     <li class="nav-item" style="margin-top: 10px;">
                         <img style=" margin-top:15px;" src="assets/img/b-pen-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Have a project overview?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Submit a form</a>
                     </li>
                     <li class="nav-item mob-menu">
                         <img style=" margin-top:13px;" src="assets/img/b-email-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Share detailed specification</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="mailto:hello@updot.in">hello@updot.in</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:12px;" src="assets/img/b-call-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" target="_blank" href="https://api.whatsapp.com/send?phone=918549827162">Chat with our executive</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:10px;" src="assets/img/b-msg-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Wanna join us</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="careers.html">Apply here</a>
                     </li>
                     </ul>
                 </div>
@@ -160,35 +160,31 @@
                     </div>
                     <div class="col-lg-6">
                         <p class="mt-5">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nesciunt commodi blanditiis placeat quis inventore quam magni 
-                            obcaecati dolores, exercitationem, dignissimos dolorem esse tenetur 
-                            quod! Doloribus adipisci iusto nostrum commodi. Molestias!
+                            Being the underdogs in the business taught us one thing; to put forth quality above all. And that is exactly what Updot has been doing over the months. We have been constantly pushing and brainstorming to produce and deliver only the best to our clients.
                         </p>
-                        <p class="mt-5">
+                        <!-- <p class="mt-5">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Nesciunt commodi blanditiis placeat quis inventore quam magni
                         </p>
                         <p class="mt-5">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Nesciunt commodi blanditiis placeat quis inventore quam magni
-                        </p>
+                        </p> -->
                     </div>
                     <div class="col-lg-6">
                         <p class="mt-5">
+                            Updot is proud to have a workforce with both experience and talent on their side. 
+                            From Web devs to Marketing gurus, we have every field covered with some of the best 
+                            personnel you can hire
+                        </p>
+                        <!-- <p class="mt-5">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nesciunt commodi blanditiis placeat quis inventore quam magni 
-                            obcaecati dolores, exercitationem, dignissimos dolorem esse tenetur 
-                            quod! Doloribus adipisci iusto nostrum commodi. Molestias!
+                            Nesciunt commodi blanditiis placeat quis inventore quam magni
                         </p>
                         <p class="mt-5">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Nesciunt commodi blanditiis placeat quis inventore quam magni
-                        </p>
-                        <p class="mt-5">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Nesciunt commodi blanditiis placeat quis inventore quam magni
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
@@ -203,42 +199,43 @@
                     <div class="col-sm-12 col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/people.svg" alt="" width="70" height="70" class=""></div>
                         <h3 class="text-center py-3">User centric</h3>
-                        <p>We’re not obsessed about our clients, we’re obsessed about our client’s clients. 
-                            We believe technology should have a learning curve to understand human behavior, 
-                            not the other way around. We employ human centered design to solve real world problems.</p>
+                        <p>Here at Updot, we work on a user centric model. We cater to the customer base
+                             while developing or designing any project. Every piece of design and 
+                            technology is made with a user-first base in mind.</p>
                     </div>
                     <div class="col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/handshake.svg" alt="" width="70" height="70" class=""></div>
                         <h3 class="text-center py-3">Transparent</h3>
-                        <p>We partner and function like your in-house team. Transparency
-                            works in our favor because we believe winning our client’s trust
-                            is the most important aspect of building a sustainable business.</p>
+                        <p>We are transparent when it comes to work. Our clients feel right at home when
+                             engaging on a project with the team. We believe trust and customer-friendly
+                             behavior is the root to a successful project.</p>
                     </div>
                     <div class="col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/user.svg" alt="" width="70" height="70" class=""></div>
                         <h3 class="text-center py-3">Attention to Detail</h3>
-                        <p>God is in the details. We believe it’s not possible to win 
-                            without getting into the trenches detailing out every single 
-                            thing that would affect the end user experience. We work to delight.</p>
+                        <p>Every small detail counts here at Updot. We carry out
+                             multiple checks to ensure quality of the products or service we deliver.</p>
                     </div>
                     <div class="col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/people.svg" alt="" width="70" height="70" class=""></div>
                         <h3 class="text-center py-3">Building for the future</h3>
-                        <p>God is in the details. We believe it’s not possible to win 
-                            without getting into the trenches detailing out every single
-                            thing that would affect the end user experience. We work to delight.</p>
+                        <p>The projects we develop are done keeping the future goals and trends in mind. 
+                            We believe that prioritising the future
+                             landscape helps us deliver better in the long run.</p>
                     </div>
                     <div class="col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/worldwide.svg" alt="" width="75" height="75" class=""></div>
                         <h3 class="text-center py-3">World class operating standards</h3>
-                        <p>We employ global standard project management tools to ensure absolute transparency is maintained in what we do.</p>
+                        <p>Each project gets a dedicated project manager to ensure smooth 
+                            flow of operations. By employing high-level standards, we ensure the
+                             transparency we promise.
+                        </p>
                     </div>
                     <div class="col-lg-4">
                         <div class="border bg-white rounded-circle img-card"><img src="assets/img/wristwatch.svg" alt="" width="75" height="75" class=""></div>
                         <h3 class="text-center py-3">Delivering on Time</h3>
                         <p>
-                            We partner and function like your in-house team. Transparency works in our favor because we believe 
-                            winning our client’s trust is the most important aspect of building a sustainable business.
+                            We aren’t fans of letting our clients down, so we prioritise delivering every project on time. When you sign your contract with us, it is a guaranteed fun ride
                         </p>
                     </div>
                 </div>
@@ -326,19 +323,19 @@
                                             <a id="fl-a" class="footer-link dark" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-b" class="footer-link dark" href="about.html">Careers</a>
+                                            <a id="fl-b" class="footer-link dark" href="careers.html">Careers</a>
                                         </li>
                                         <li class="footer-item py-2">
                                             <a id="fl-c" class="footer-link dark" href="blog.html">Blog</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-d" class="footer-link dark" href="blog.html">Privacy Policy</a>
+                                            <a id="fl-d" class="footer-link dark" href="privacypolicy.html">Privacy Policy</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-e" class="footer-link dark" href="blog.html">Terms and Conditions</a>
+                                            <a id="fl-e" class="footer-link dark" href="terms.html">Terms and Conditions</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-f" class="footer-link dark" href="blog.html">Contact</a>
+                                            <a id="fl-f" class="footer-link dark" href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -346,12 +343,12 @@
                             <div class="row social-media">
                                 <h2>Follow us</h2>
                                 <div class="row py-3">
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.facebook.com/updot.in"><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.instagram.com/updot.in"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://api.whatsapp.com/send?phone=918549827162"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://github.com/Updot"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.behance.net/updot"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.linkedin.com/company/updot/"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -381,9 +378,9 @@
         <script>
             $(document).ready(function(){
                 if(screen.width < 768) {
-                    $("#main-logo").attr("src", "assets/img/Favicon.png");
-                    $("#main-logo").attr("width", "65");
-                    $("#main-logo").attr("height", "50");
+                    $("#main-logo").attr("src", "assets/img/blogo.png");
+                    $("#main-logo").attr("width", "70");
+                    $("#main-logo").attr("height", "25");
                 }
             })
         </script>
@@ -408,7 +405,7 @@
                     }
                     if (screen.width < 768) {
                          //scrolled and not in dark mode in mobile view;
-                         $("#main-logo").attr("src", "assets/img/Main Logo.png");
+                         $("#main-logo").attr("src", "assets/img/wLogo.png");
                         // console.log(screen.width);
                         $(".nav-link").css("color", "black");
                         $("#mainNav").css("background" , "#37474F");
@@ -429,7 +426,7 @@
                     }
 
                     if(screen.width < 768){
-                        $("#main-logo").attr("src", "assets/img/Favicon.png");
+                        $("#main-logo").attr("src", "assets/img/blogo.png");
                         //didn't' scroll and not in darkmode in mobile view
                         // $(".navbar-brand").css("color", "black");  	
                         $("#mainNav").css('background', 'transparent');
