--- a/blog.html
+++ b/blog.html
@@ -98,22 +98,22 @@
                     <li class="nav-item" style="margin-top: 10px;">
                         <img style=" margin-top:15px;" src="assets/img/b-pen-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Have a project overview?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Submit a form</a>
                     </li>
                     <li class="nav-item mob-menu">
                         <img style=" margin-top:13px;" src="assets/img/b-email-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Share detailed specification</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="mailto:hello@updot.in">hello@updot.in</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:12px;" src="assets/img/b-call-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" target="_blank" href="https://api.whatsapp.com/send?phone=918549827162">Chat with our executive</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:10px;" src="assets/img/b-msg-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Wanna join us</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="careers.html">Apply here</a>
                     </li>
                     </ul>
                 </div>
@@ -170,7 +170,17 @@
         <section class="blog">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 card-deck">
+                    <div class="col-lg-6 card-deck">
+                        <div class="card" style="background-color: transparent;">
+                            <img class="card-img-top" src="assets/img/Hosting-2.png" alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">BEST FREE WEB HOSTING 2021</h5>
+                              <p class="card-text">Websites for any start-up has become a dime a dozen today and a web host makes it a piece of cake for you. It goes without saying, web hosting gives individuals and organizations access to digital presence.</p>
+                              <p class="card-text"><small class="text-muted"><a href="freewebhost.html">Read more..</a></small></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-lg-4 card-deck">
                         <div class="card" style="background-color: transparent;">
                             <img class="card-img-top" src="..." alt="Card image cap">
                             <div class="card-body">
@@ -189,20 +199,10 @@
                               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 card-deck">
-                        <div class="card" style="background-color: transparent;">
-                            <img class="card-img-top" src="..." alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-lg-4 card-deck">
                         <div class="card" style="background-color: transparent;">
                             <img class="card-img-top" src="..." alt="Card image cap">
@@ -233,7 +233,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- blog content ends -->
@@ -319,19 +319,19 @@
                                             <a id="fl-a" class="footer-link dark" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-b" class="footer-link dark" href="about.html">Careers</a>
+                                            <a id="fl-b" class="footer-link dark" href="careers.html">Careers</a>
                                         </li>
                                         <li class="footer-item py-2">
                                             <a id="fl-c" class="footer-link dark" href="blog.html">Blog</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-d" class="footer-link dark" href="blog.html">Privacy Policy</a>
+                                            <a id="fl-d" class="footer-link dark" href="privacypolicy.html">Privacy Policy</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-e" class="footer-link dark" href="blog.html">Terms and Conditions</a>
+                                            <a id="fl-e" class="footer-link dark" href="terms.html">Terms and Conditions</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-f" class="footer-link dark" href="blog.html">Contact</a>
+                                            <a id="fl-f" class="footer-link dark" href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -339,12 +339,12 @@
                             <div class="row social-media">
                                 <h2>Follow us</h2>
                                 <div class="row py-3">
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.facebook.com/updot.in/"><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.instagram.com/updot.in/"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://api.whatsapp.com/send?phone=918549827162"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://github.com/Updot"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.behance.net/updot"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.linkedin.com/company/updot/"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -373,9 +373,9 @@
         <script>
             $(document).ready(function(){
                 if(screen.width < 768) {
-                    $("#main-logo").attr("src", "assets/img/Favicon.png");
-                    $("#main-logo").attr("width", "65");
-                    $("#main-logo").attr("height", "50");
+                    $("#main-logo").attr("src", "assets/img/blogo.png");
+                    $("#main-logo").attr("width", "70");
+                    $("#main-logo").attr("height", "25");
                 }
             })
         </script>
@@ -403,7 +403,7 @@
                     }
                     if (screen.width < 768) {
                          //scrolled and not in dark mode in mobile view;
-                         $("#main-logo").attr("src", "assets/img/Main Logo.png");
+                         $("#main-logo").attr("src", "assets/img/wLogo.png");
                         // console.log(screen.width);
                         $(".nav-link").css("color", "black");
                         $("#mainNav").css("background", "#37474F");
@@ -424,7 +424,7 @@
                     }
 
                     if(screen.width < 768){
-                        $("#main-logo").attr("src", "assets/img/Favicon.png");
+                        $("#main-logo").attr("src", "assets/img/blogo.png");
                         //didn't' scroll and not in darkmode in mobile view
                         // $(".navbar-brand").css("color", "black");  	
                         $(".nav-link").css("color", "black");
