--- a/careers.html
+++ b/careers.html
@@ -159,14 +159,12 @@
             <div class="container my-5">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="text-left pt-5 mb-3 big-hire">Contact Us</h1>
-                        <span class="strong"><strong>Let's create something awesome together</strong></span>
+                        <h1 class="text-left pt-5 mb-3 big-hire">Careers</h1>
+                        <span class="strong"><strong>Join with us today</strong></span>
                     </div>
-                    <div class="col-lg-6 mt-5 pt-5">
-                        <p class="mt-5">Contact us today if you have questions about UpDot.
-                            Our customer care executive will respond as soon as possible with answers to your
-                            questions.</p>
-                    </div>
+                    <!-- <div class="col-lg-6 mt-5 pt-5">
+                        <p class="mt-5"></p>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -177,8 +175,8 @@
             <div class="container pt-5">
                 <div class="row px-3">
                     <div class="col-lg-6" data-aos="fade-down">
-                        <h2>Talk with Us</h2>
-                        <p class="pt-3">Discuss your plans with us</p>
+                        <h2>Let us Know</h2>
+                        <p class="pt-3">Enter your details below</p>
                         <form action="#" class="row">
                             <div class="col-lg-10 pt-3 px-3 ">
                               <input type="text" class="form-control" id="validationServer01" required placeholder="Name">
@@ -282,7 +280,7 @@
                                    <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://api.whatsapp.com/send?phone=918549827162"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
                                    <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.github.com/Updot"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
                                    <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.behance.net/updot"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://www.linkedin.com/company/updot/"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a target="_blank" href="https://linkedin.com/company/updot/"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
                                 </div>
                             </div>
                         </div>
