--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
                     <li class="nav-item" style="margin-top: 10px;">
                         <img style=" margin-top:15px;" src="assets/img/b-pen-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Have a project overview?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="index.html">Submit a form</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Submit a form</a>
                     </li>
                     <li class="nav-item mob-menu">
                         <img style=" margin-top:13px;" src="assets/img/b-email-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Share detailed specification</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="about.html">updot@gmail.com</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="mailto@:hello@updot.in">updot@gmail.com</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:12px;" src="assets/img/b-call-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Begin a quick discussion?</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="contact.html">Chat with our executive</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" target="_blank" href="https://api.whatsapp.com/send?phone=918549827162">Chat with our executive</a>
                     </li>
                     <li class="nav-item">
                         <img style=" margin-top:10px;" src="assets/img/b-msg-icon.svg" alt="" width="24" height="24">
                         <p style="display: inline; padding-left:20px;">Wanna join us</p>
-                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="blog.html">Apply here</a>
+                        <a style="margin-top: -10px;" class="action-mob-nav nav-link active" href="careers.html">Apply here</a>
                     </li>
                     </ul>
                 </div>
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
                 <!--contact us button-->
-                <button class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
+                <button id="homecontact" class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
                     <a class="btn btn-primary js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
                 </button>
                 <!--nightmode icon in desktop view-->
@@ -143,14 +143,14 @@
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <img class="d-lg-none" src="assets/img/Updot Phone PopUp-01.png" alt="" width="100%">
-                        <h1 class="text-uppercase animate__animated animate__pulse ">Website <div class="next">Development</div> Services</h1>
+                        <h1 class="text-uppercase animate__animated animate__pulse ">Uplifting <div class="next">Your</div> Dreams</h1>
                         <hr />
                     </div>
                 </div>
                 <div class="col-lg-8 mx-auto">
-                    <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just start going, no strings attached!</p>
-                    <button class="btn btn-primary text-white rounded-pill mx-auto" type="button">
-                        <a class="btn btn-primary js-scroll-trigger" role="button" href="#services">Get a quote</a>
+                    <p class="text-faded mb-5">Whatever your business is, we have you covered. With a dedicated team onboard, we never fall short on expectations. </p>
+                    <button class="btn btn-transparent border-dark rounded-pill mx-auto" type="button">
+                        <a class="btn btn-transparent text-white js-scroll-trigger" role="button" href="#services">Get a quote</a>
                     </button>
                 </div>
             </div>
@@ -167,14 +167,11 @@
                         data-rotate='[ "Amazing Websites !", "Beautiful Applications !", "Chatbots !",  "Digital Strategies" ]'></span>
                 </div>
                 <div class="col-lg-8 mx-auto" style="text-align: center;">
-                    <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nobis natus obcaecati repellendus earum distinctio. Obcaecati
-                    reiciendis impedit praesentium ratione cum voluptatem architecto, 
-                    doloribus rem et soluta maiores assumenda delectus aliquam!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Nobis natus obcaecati repellendus earum distinctio. Obcaecati
-                        reiciendis impedit praesentium ratione cum voluptatem architecto, 
-                        doloribus rem et soluta maiores assumenda delectus aliquam!</p></div>
+                    <p class="mt-5">Using only top-grade technologies, Updot Solutions 
+                        deliver what we promised. We are your one-stop solution to everything development,
+                         design, or marketing related. Updot holds high-standards in terms of project execution
+                         and that remains the sole reason behind our 100% client satisfaction ratio.</p>
+                </div>
             </div>
         </div>
 
@@ -256,14 +253,12 @@
             <div class="mt-5 container">
                 <h1 class="cd-hire" style="text-align: center;">Hire the best Web and Mobile app developers</h1>
                 <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;">
-                    <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nobis natus obcaecati repellendus earum distinctio. Obcaecati
-                    reiciendis impedit praesentium ratione cum voluptatem architecto, 
-                    doloribus rem et soluta maiores assumenda delectus aliquam!</p>
-                    <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Nobis natus obcaecati repellendus earum distinctio. Obcaecati
-                        reiciendis impedit praesentium ratione cum voluptatem architecto, 
-                        doloribus rem et soluta maiores assumenda delectus aliquam!</p>
+                    <p class="mt-5">With over a 1000 firms offering similar services, you might ask yourself, why choose us? The answer
+                        is simple. We outdo the rest with our quality and hard work. And the best part? We manage to do
+                        this while charging you relatively less than what most firms in the market does</p>
+                    <p class="mt-3">Updot consists of a team of developers, designers, SEO experts and marketing experts with years of
+                        experience in the field. We are growing every day along with our clients and we would like it if you
+                        would join that very list.</p>
                 </div>
             </div>
         </section>
@@ -274,7 +269,7 @@
             <div class="container pb-3 mb-5">
                 <div class="row">
                     <div class="col-lg-12 animate__animated animate__pulse" data-aos="fade-down"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
-                    <div class="col-lg-10 mx-auto" data-aos="fade-down" style="text-align: center;"><img src="assets/img/workindia1.gif" style="width: 90%;"></div>
+                    <div class="col-lg-10 mx-auto" data-aos="fade-down" style="text-align: center;"><img src="assets/img/Updot map .png" style="width: 90%;"></div>
                 </div>
                 <div class="row">
                     <div class="container mx-3 px-3">
@@ -311,24 +306,21 @@
                         <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%)">
                             <h3 class="title">Web Development</h3>
                             <div class="img-box"><img class="web-dev" src="assets/img/hire-dedicated-developer.svg" style="width: 299px; height: 212px;"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">We design and develop top-notch websites according to your requirements and ideas. Take your idea across all top platforms the web has to offer.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 px-4">
                         <div class="box" style="background-image: linear-gradient(rgb(230, 221, 244) 0%, rgb(230, 221, 244) 100%);">
                             <h3 class="title">Chatbot Development</h3>
                             <div class="img-box"><img class="chatbot" src="assets/img/chatbot-1.svg" style="width:299px; height:212px;"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">Need an additional route for leads and acquisition? Why not invest in a customized chatbot for your business.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 px-4">
                         <div class="box" style="background-image: linear-gradient(rgb(209, 211, 246) 0%, rgb(209, 211, 246) 100%);">
                             <h3 class="title">App Development</h3>
                             <div class="img-box"><img src="assets/img/services-mobile-apps.svg" style="width:299px; height: 212px;"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">Looking ahead to the future? Apps might be your best bet. Get your app developed on the latest technology with our team.</p>
                         </div>
                     </div>
                 </div>
@@ -337,24 +329,21 @@
                         <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
                             <h3 class="title">Search Engine Optimization</h3>
                             <div class="img-box"><img id="seo" src="assets/img/seo-des.svg"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">We know how tough it is to rank for keywords you wish for. With our dedicated team, get your website amongst the top in Google rankings.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 px-4">
                         <div class="box" style="background-image: linear-gradient(rgb(246, 214, 214) 0%, rgb(246, 214, 214) 100%);">
-                            <h3 class="title">Logo Designing</h3>
+                            <h3 class="title">Branding</h3>
                             <div class="img-box"><img src="assets/img/brand.svg" style="width: 370px; height: 212px;"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">Started off a new business and need to let people know of your presence? We are the right team for the job as we cover everything from Logo, Graphics and brochures.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 px-4">
                         <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%);">
                             <h3 class="title">Digital Marketing</h3>
                             <div class="img-box"><img src="assets/img/digmark.svg" style="width: 370px; height: 212px;"></div>
-                            <p class="services-content">Create your own team of developers for your software development project on short term,
-                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                            <p class="services-content">Looking to promote your brand across the nation? We have you covered. After extensive research and planning, we’ll present the best possible strategy to boost your digital presence.</p>
                         </div>
                     </div>
                 </div>
@@ -442,16 +431,16 @@
                                             <a id="fl-a" class="footer-link dark" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-b" class="footer-link dark" href="about.html">Careers</a>
+                                            <a id="fl-b" class="footer-link dark" href="careers.html">Careers</a>
                                         </li>
                                         <li class="footer-item py-2">
                                             <a id="fl-c" class="footer-link dark" href="blog.html">Blog</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-d" class="footer-link dark" href="blog.html">Privacy Policy</a>
+                                            <a id="fl-d" class="footer-link dark" href="privacypolicy.html">Privacy Policy</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a id="fl-e" class="footer-link dark" href="blog.html">Terms and Conditions</a>
+                                            <a id="fl-e" class="footer-link dark" href="terms.html">Terms and Conditions</a>
                                         </li>
                                         <li class="footer-item py-2">
                                             <a id="fl-f" class="footer-link dark" href="contact.html">Contact</a>
@@ -462,12 +451,12 @@
                             <div class="row social-media">
                                 <h2>Follow us</h2>
                                 <div class="row py-3">
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#" ><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
-                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="#"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://www.facebook.com/updot.in" target="_blank"><i class="fab fa-facebook-f" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://www.instagram.com/updot.in" target="_blank"><i class="fab fa-instagram" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://api.whatsapp.com/send?phone=918549827162" target="_blank"><i class="fab fa-whatsapp" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://www.behance.net/updot" target="_blank"><i class="fab fa-behance" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://www.linkedin.com/company/updot/" target="_blank"><i class="fab fa-linkedin-in" style="color: rgb(7,7,7);"></i></a></div>
+                                   <div class="col p-3 shadow p-3 mb-5 bg-white rounded" style="text-align: center;"><a href="https://www.github.com/Updot" target="_blank"><i class="fab fa-github" style="color: rgb(7,7,7);"></i></a></div>
                                 </div>
                             </div>
                         </div>
@@ -497,9 +486,9 @@
         <script>
             $(document).ready(function(){
                 if(screen.width < 768) {
-                    $("#main-logo").attr("src", "assets/img/Main Logo.png");
-                    $("#main-logo").attr("width", "65");
-                    $("#main-logo").attr("height", "50");
+                    $("#main-logo").attr("src", "assets/img/wLogo.png");
+                    $("#main-logo").attr("width", "70");
+                    $("#main-logo").attr("height", "25");
                 }
             })
         </script>
@@ -525,7 +514,7 @@
                     }
                     if (screen.width < 992) {
                         //scrolled and not in dark mode in mobile view;
-                        $("#main-logo").attr("src", "assets/img/Main Logo.png");
+                        $("#main-logo").attr("src", "assets/img/wLogo.png");
                         // console.log(screen.width);
                         $("#mainNav").css("background", "#37474F");
                         $(".nav-link").css("color", "black");
@@ -579,7 +568,7 @@
                         $(".nav-link").css("color", "white");
                         $("#mainNav").css("background" , "transparent");
                     }
-
+                    
                 }
             })
             })
